# Stonebreak

./: .gitattributes  .gitignore  COW_MODEL_POSITIONING_FIX_SUMMARY.md  MEMORY_DEBUG_USAGE.md  MEMORY_LEAK_FIXES.md  README.md  SAVE_SYSTEM_CLEANUP.md  SAVE_SYSTEM_DATA_FLOW.md  SAVE_SYSTEM_REDESIGN_INSTRUCTIONS.md  SAVE_SYSTEM_REDESIGN_PLAN.md  TERRAIN_GENERATION_PLAN.md  WORLD_SYSTEM_ANALYSIS.md  build-and-run-with-java17.ps1  build.bat  build.ps1  chunk_gl_errors.txt  compile.bat  compile_and_run.bat  crash_log.txt  mvn-with-java17.bat  mvn17.bat  mvn17.ps1  opengl_errors.txt  package-lock.json  pom.xml  run-with-java17.bat  run.bat  set_java17.bat  set_java17.ps1  setup.bat  texture_test.java  use-java17.ps1
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: open-mason-bug-report.md  open-mason-feature-request.md  project-mo--batch-template.md  stonebreak-bug-report.md  stonebreak-feature-template.md
.run/: Stonebreak.run.xml
backups/test after_2025-09-08_19-19-24/: world.json
backups/test test_2025-09-09_16-34-21/: world.json
openmason-engine/: pom.xml
openmason-engine/cenda/: CMakeLists.txt  CMakePresets.json
openmason-engine/cenda/libomformat/: CMakeLists.txt
openmason-engine/cenda/libomformat/include/omformat/: byte_reader.hpp  version.hpp
openmason-engine/cenda/libomformat/src/: version.cpp
openmason-engine/cenda/native/kernels/: CMakeLists.txt
openmason-engine/cenda/native/kernels/include/cenda/: kernels.h
openmason-engine/cenda/native/kernels/src/: carver.cpp  generator.cpp  java_compat.hpp  kernels.cpp  mesher.cpp  nodes.hpp  terrain_ctx.hpp  zstd_codec.cpp
openmason-engine/cenda/tests/: CMakeLists.txt  kernels_chunk_test.cpp  kernels_smoke_test.cpp  smoke_test.cpp
openmason-engine/src/main/java/: module-info.java
openmason-engine/src/main/resources/shaders/clouds/: clouds.vert
openmason-engine/src/main/resources/shaders/postfx/: fullscreen.vert  godrays_blur.frag  godrays_occlusion.frag
openmason-engine/src/main/resources/shaders/sky/: sky.vert
openmason-tool/: Theme.ini  pom.xml
openmason-tool/src/main/java/: module-info.java
openmason-tool/src/main/java/com/openmason/: AsyncResourceManager.java  AsyncResourceSystemTest.java
openmason-tool/src/main/resources/: logback.xml
openmason-tool/src/main/resources/css/: dark-theme.css  help-browser.css  help-content.css  icons.css
openmason-tool/src/main/resources/fxml/: main-window.fxml
openmason-tool/src/main/resources/mcp/guide/: animation.md  attachments.md  bones.md  face_textures.md  overview.md  parts.md  recipes.md  scripting.md
openmason-tool/src/main/resources/scripting/: om.py
openmason-tool/src/main/resources/shaders/: gizmo.frag  gizmo.vert
openmason-tool/src/test/resources/mcp/: expected-tool-names.txt
src/main/java/com/stonebreak/: BiomeType.java  BlockDrop.java  BlockDropManager.java  BlockDropRenderer.java  BlockType.java  Camera.java  ChatMessage.java  ChatSystem.java  Chunk.java  ChunkManager.java  CraftingManager.java  CraftingRecipe.java  CraftingTableScreen.java  DebugOverlay.java  Font.java  Game.java  GameState.java  InputHandler.java  Inventory.java  InventoryScreen.java  Item.java  ItemCategory.java  ItemStack.java  ItemType.java  LoadingScreen.java  Main.java  MainMenu.java  MathUtils.java  MemoryLeakDetector.java  MemoryProfiler.java  MobTextureAtlas.java  MouseCaptureManager.java  NoiseGenerator.java  PauseMenu.java  Player.java  Recipe.java  RecipeBookScreen.java  RecipeManager.java  Renderer.java  SerializableItemStack.java  (+11 more)
src/main/java/com/stonebreak/audio/: SoundSystem.java
src/main/java/com/stonebreak/blocks/: BlockDrop.java  BlockDropRenderer.java
src/main/java/com/stonebreak/chat/: ChatSystem.java
src/main/java/com/stonebreak/config/: Settings.java
stonebreak-game/: TestGame.java  pom.xml
stonebreak-game/src/main/java/: module-info.java
stonebreak-game/src/main/resources/: logback.xml  splash_text.json
stonebreak-game/src/main/resources/Blocks/: Block_ids.JSON
stonebreak-game/src/main/resources/Items/: Item_ids.JSON  Items_structure.JSON
stonebreak-game/src/main/resources/Texture Atlas/: atlas_metadata.json  texture_checksums.json
stonebreak-game/src/main/resources/blocks/: Block_ids.JSON  Blocks_structure.JSON
stonebreak-game/src/main/resources/fonts/: .placeholder
stonebreak-game/src/main/resources/texture atlas/: atlas_metadata.json  texture_checksums.json
terrain-bridge/: README.md  requirements.txt
terrain-bridge/bridge/: cache.py  config.py  height_mapping.py  main.py  queue.py  tiling.py  upstream_client.py
terrain-bridge/tests/: test_cache.py  test_height_mapping.py  test_queue.py  test_tiling.py
tmp_extract_furnace/: manifest.json  model.omo
worlds/apsdoga/: world.json
worlds/qwertyui/: world.json
worlds/test 1/: world.json
worlds/test 2/: world.json
worlds/test 3/: world.json
worlds/test after water]/: world.json
worlds/test test 1/: world.json
(+3189 files in other folders)
